# azs_local_server_rust

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
src/: base.rs  check_auth_middleware.rs  check_auth_only_admin_middleware.rs  check_db_api_middleware.rs  check_db_view_middleware.rs  jwt.rs  logger.rs  main.rs  models.rs  render_temps.rs  swagger_docs.rs
src/controllers/: api_db_controller.rs  api_service_controller.rs  core_logic_controller.rs  mod.rs  objects_of_controllers.rs  settings_controller.rs  view_old_controller.rs
