[package]
name = "azs_local_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-files = "0.6.5"
actix-web = "4"
futures-util = "0.3.30"
ramhorns = "0.14.0"
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
http = "0.2.12"
chrono = "0.4.35"
actix-service = "2.0.2"
futures = "0.3.30"
utoipa = { version = "4.2.0",features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0",features = ["actix-web"] }
async-std = "1.12.0"
serde_json = "1.0.114"
once_cell = "1.19.0"
lazy_static = "1.4.0"
jsonwebtoken = "9.3.0"
actix-cors = "0.7.0"
log = "0.4.22"

[build-dependencies]
walkdir = "2.3"
